--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    left and right arrow keys to rotate
-			up arrow key to accelerated in pointed direction
+		    left and right arrow keys to rotate,
+			up arrow key to accelerate in pointed direction,
 			mouse click for hyperspace
 	    </footer>
 	</body>
