--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>can we pretend that airplanes in the night sky are like shooting stars</h1>
 		</header>
 			<section id="content">
-				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde asteroid.pde">
+				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde asteroid.pde Bullet.pde">
 				</canvas>
 		    </section>
 	    <footer>
