--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	    <footer>
 		    left and right arrow keys to rotate,
 			up arrow key to accelerate in pointed direction,
+			space key to shoot,
 			mouse click for hyperspace
 	    </footer>
 	</body>
